--- a/src/components/ListItem/ListItem.css
+++ b/src/components/ListItem/ListItem.css
@@ -16,6 +16,7 @@
     position: relative;
     display: flex;
     max-width: 100%;
+    overflow: hidden;
     }
 
     .ListItem__icon {
