--- a/src/components/View/View.css
+++ b/src/components/View/View.css
@@ -100,6 +100,10 @@
     z-index: 1;
     }
 
+  .View__panel-in {
+    height: 100%;
+    }
+
   .View--animated .View__panel,
   .View--swiping-back .View__panel {
     position: fixed;
