--- a/src/components/View/iOS/Panel.css
+++ b/src/components/View/iOS/Panel.css
@@ -18,7 +18,6 @@
 
 .View--ios .View__panel-in {
   position: relative;
-  min-height: 100%;
   box-sizing: border-box;
   padding-bottom: constant(safe-area-inset-bottom);
   padding-bottom: env(safe-area-inset-bottom);
@@ -75,28 +74,28 @@
   animation: animation-ios-prev-back .6s var(--ios-easing);
   }
 
-.View--ios .View__panel--prev > .View__panel-in::before,
-.View--ios .View__panel--next > .View__panel-in::before {
+.View--ios .View__panel--prev .ScrollView__in::before,
+.View--ios .View__panel--next .ScrollView__in::before {
   position: absolute;
-  top: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   left: 0;
-  bottom: 0;
+  top: 0;
   z-index: 10;
   background: #000;
   content: '';
   pointer-events: none;
   }
-.View--ios .View__panel--prev > .View__panel-in::before,
+.View--ios .View__panel--prev .ScrollView__in::before,
 .View--ios .FixedLayout--prev > .FixedLayout__transition-shadow {
   animation: animation-ios-fade-in .6s var(--ios-easing);
   }
-.View--ios .View__panel--next > .View__panel-in::before,
+.View--ios .View__panel--next .ScrollView__in::before,
 .View--ios .FixedLayout--next > .FixedLayout__transition-shadow {
   animation: animation-ios-fade-out .6s var(--ios-easing);
   }
-.View--ios .View__panel--prev ~ .View__panel--next > .View__panel-in::before,
-.View--ios .View__panel--next ~ .View__panel--prev > .View__panel-in::before,
+.View--ios .View__panel--prev ~ .View__panel--next .ScrollView__in::before,
+.View--ios .View__panel--next ~ .View__panel--prev .ScrollView__in::before,
 .View--ios .FixedLayout--prev ~ .FixedLayout--next > .FixedLayout__transition-shadow,
 .View--ios .FixedLayout--next ~ .FixedLayout--prev > .FixedLayout__transition-shadow {
   content: none;
@@ -106,7 +105,7 @@
 /**
  * Active panel
  */
-.View--ios .View__panel--active::before,
+.View--ios .View__panel--active .ScrollView__in::before,
 .View--ios .FixedLayout--active > .FixedLayout__transition-shadow {
   content: none;
   display: none;
